[package]
name = "gothook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.2.2"
lazy_static = "1.4.0"
libc = "0.2.147"
nix = { version = "0.26.2", features = ["fs", "zerocopy", "mman", "feature"] }
object = "0.31.1"
procfs = "0.15.1"
thiserror = "1.0.40"
